@@ -4,6 +4,7 @@ Every release contains many small fixes.
 
 === next
 * Allow wizards to have a last step without active next button
+* HtmlFrontend: add close button to dialogs
 
 === 1.13.0.0
 * Sorting for completely loaded tables
